scroll to next card after marking reviewed

--- a/manage_breast_screening/mammograms/jinja2/mammograms/components/card_with_status.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/components/card_with_status.jinja
@@ -25,8 +25,10 @@
       {% if presented_section.is_reviewed %}
         <a href="{{ presented_section.next_section_link.href }}" class="nhsuk-button nhsuk-button--secondary"> {{ presented_section.next_section_link.text }}</a>
       {% else %}
+        {% if presented_section.next_section_link %}
         <span data-show-on-review hidden><a href="{{ presented_section.next_section_link.href }}" class="nhsuk-button nhsuk-button--secondary"> {{ presented_section.next_section_link.text }}</a></span>
-        <div data-module="app-mark-reviewed" data-status-card-id="{{ presented_section.anchor }}">
+        {% endif %}
+        <div data-module="app-mark-reviewed" data-status-card-id="{{ presented_section.anchor }}" data-next-card-id="{{ presented_section.next_anchor }}">
           <form method="post" action="{{ presented_section.review_button.href }}">
             {{ csrf_input }}
             <button type="submit" class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-bottom-0"> {{ presented_section.review_button.text }} </button>
