--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/breast_features/form.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/breast_features/form.jinja
@@ -38,7 +38,7 @@
       {% set diagram_html = app_breast_diagram(
         version=diagram_version,
         attributes={
-          'aria-labeled-by': 'breast-diagram-description'
+          'aria-labelled-by': 'breast-diagram-description'
         }
       ) %}
 
