unskip axe test for breast features page
Now that we have removed the invalid use of aria-label, we can
enable this test again.

This does not mean the component is accessible, just that the axe check
has not flagged anything that needs dealing with.

--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/breast_features/form.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/breast_features/form.jinja
@@ -38,7 +38,7 @@
       {% set diagram_html = app_breast_diagram(
         version=diagram_version,
         attributes={
-          'aria-labelled-by': 'breast-diagram-description'
+          'aria-labelledby': 'breast-diagram-description'
         }
       ) %}
 
