--- a/manage_breast_screening/assets/sass/components/_mammogram-thumbnail.scss
+++ b/manage_breast_screening/assets/sass/components/_mammogram-thumbnail.scss
@@ -2,13 +2,17 @@
 
 .app-mammogram-thumbnail {
   width: 100%;
-  aspect-ratio: 1;
   background-color: nhsuk-colour("grey-5");
   border: 1px solid nhsuk-colour("grey-4");
   display: flex;
   align-items: center;
   justify-content: center;
   overflow: hidden;
+
+  &__missing {
+    @extend .app-mammogram-thumbnail;
+    aspect-ratio: 1;
+  }
 }
 
 .app-mammogram-thumbnail__image {
