--- a/manage_breast_screening/mammograms/jinja2/mammograms/_image_set.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/_image_set.jinja
@@ -6,8 +6,8 @@
       0× {{ laterality }}
     </h3>
 
-    <div class="app-mammogram-image--placeholder app-mammogram-image--missing nhsuk-u-margin-bottom-3">
-      <div class="app-mammogram-image--missing-content">
+    <div class="app-mammogram-thumbnail__missing nhsuk-u-margin-bottom-3">
+      <div class="app-mammogram-thumbnail__placeholder">
         <span class="nhsuk-u-secondary-text-color">No image</span>
       </div>
     </div>
@@ -19,7 +19,7 @@
     <div class="">
       {% for image in images %}
         {% if image.image_file %}
-          <div class="app-mammogram-image--placeholder nhsuk-u-margin-right-3 nhsuk-u-margin-bottom-2" style="float:left">
+          <div class="app-mammogram-thumbnail nhsuk-u-margin-right-3 nhsuk-u-margin-bottom-2" style="float:left">
             <img class="nhsuk-image__img" src="{{image.image_file.url}}" alt="Mammogram image thumbnail {{ laterality }} view">
           </div>
         {% endif %}
