Adjust image display width in relation to step content and form
The mammogram image display should be full column width. This part of the gateway images page is dynamically updated and needs to contain hidden form fields.
The wizard form in the workflow step template is usually two-thirds width, so make this configurable along with button text.
This allows us to have full a width form and to adjust internal content.

--- a/manage_breast_screening/core/jinja2/workflow_step.jinja
+++ b/manage_breast_screening/core/jinja2/workflow_step.jinja
@@ -77,7 +77,7 @@
           {% if form %}
             <form action="{{ request.path }}" method="post" novalidate>
               <div class="nhsuk-grid-row">
-                  <div class="nhsuk-grid-column-two-thirds">
+                  <div class="{{ form_container_classes|default("nhsuk-grid-column-two-thirds") }}">
                     {% block form %}{% endblock form %}
 
                     {% if form.decision %}
@@ -85,7 +85,7 @@
                     {% endif %}
 
                     {{ button({
-                      "text": "Continue"
+                      "text": continue_button_text|default("Continue")
                     }) }}
 
                     {{csrf_input}}
