Restore sysadmin label to personas (after merge conflict)

--- a/manage_breast_screening/auth/jinja2/auth/persona_login.jinja
+++ b/manage_breast_screening/auth/jinja2/auth/persona_login.jinja
@@ -40,7 +40,7 @@
         {% endset %}
         {% set ns.rows = ns.rows + [{
           "key": {
-            "text": entry.user.first_name ~ " " ~ entry.user.last_name,
+            "text": entry.user.first_name ~ " " ~ entry.user.last_name ~ (" (Sysadmin)" if entry.user.is_sysadmin else ""),
             "classes": "nhsuk-u-width-three-quarters"
           },
           "value": {
