--- a/manage_breast_screening/participants/jinja2/components/participant-details/participant_details.jinja
+++ b/manage_breast_screening/participants/jinja2/components/participant-details/participant_details.jinja
@@ -57,7 +57,7 @@
          "text": "Ethnicity"
        },
        "value": {
-         "html": ethnicity_html(presented_participant) | safe
+         "html": ethnicity_html(presented_participant, return_url) | safe
        },
        "actions": ethnicity_change_link
      },
